# GtkIndicators

./: .gitignore  CMakeLists.txt  README.md
resources/: gtk_indicators.glade  gtk_indicators.gresource.xml
resources/style/scss/: _gtk_indicators_button.scss  gtk_indicators_style.scss
src/: app_globals.h  version.h.in
src/indicators/: basic_level_indicator.c  basic_level_indicator.h  battery_indicator.c  battery_indicator.h  bluetooth_indicator.c  bluetooth_indicator.h  gtkdial.c  gtkdial.h  numeric_label.c  numeric_label.h  puck_indicator.c  puck_indicator.h  scaling_level_indicator.c  scaling_level_indicator.h  tank_indicator.c  tank_indicator.h
src/utils/: logging.c
src/views/: css_styler.c  indicator_layout.c  indicator_layout.h  root_window.c  ui_builder.c
